--- a/macos-versions/macos-versions/Base.lproj/Main.storyboard
+++ b/macos-versions/macos-versions/Base.lproj/Main.storyboard
@@ -37,6 +37,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <segue destination="kqc-jo-k1g" kind="presentation" identifier="versionDetail" id="wdQ-Ll-iJ4"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -57,7 +60,6 @@
                     <navigationItem key="navigationItem" id="ISk-II-1yk"/>
                     <connections>
                         <outlet property="versionsCollectionView" destination="Wu7-nH-1xn" id="Zcm-r4-RG7"/>
-                        <segue destination="kqc-jo-k1g" kind="showDetail" identifier="versionDetail" id="aOI-YW-Ufq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -73,49 +75,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple-background" translatesAutoresizingMaskIntoConstraints="NO" id="yr3-Wy-JmV">
-                                <rect key="frame" x="10" y="20" width="394" height="200"/>
+                                <rect key="frame" x="10" y="0.0" width="394" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="T7p-hA-d87"/>
+                                    <constraint firstAttribute="height" constant="150" id="T7p-hA-d87"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cX6-7e-HTd">
-                                <rect key="frame" x="10" y="237" width="394" height="26.5"/>
+                                <rect key="frame" x="10" y="167" width="394" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date announced:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZuQ-op-N9h">
-                                <rect key="frame" x="20" y="297" width="130" height="21"/>
+                                <rect key="frame" x="20" y="227" width="130" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXD-eH-k0B">
-                                <rect key="frame" x="186" y="297" width="42" height="21"/>
+                                <rect key="frame" x="186" y="227" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date released:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lee-Mh-zYc">
-                                <rect key="frame" x="20" y="338" width="110" height="21"/>
+                                <rect key="frame" x="20" y="268" width="110" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5g-vx-5VN">
-                                <rect key="frame" x="186" y="338" width="42" height="21"/>
+                                <rect key="frame" x="186" y="268" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suitable for devices" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKB-IU-n5L">
-                                <rect key="frame" x="20" y="386" width="150" height="21"/>
+                                <rect key="frame" x="20" y="316" width="150" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="413-Sw-1b3">
-                                <rect key="frame" x="20" y="427" width="374" height="351"/>
+                                <rect key="frame" x="20" y="357" width="374" height="421"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -129,7 +131,7 @@
                             <constraint firstItem="lee-Mh-zYc" firstAttribute="top" secondItem="ZuQ-op-N9h" secondAttribute="bottom" constant="20" id="2c1-X4-jXb"/>
                             <constraint firstItem="cX6-7e-HTd" firstAttribute="leading" secondItem="VTx-b4-NVD" secondAttribute="leading" constant="10" id="3H4-0K-IYj"/>
                             <constraint firstItem="KXD-eH-k0B" firstAttribute="leading" secondItem="ZuQ-op-N9h" secondAttribute="trailing" constant="36" id="6F9-1z-Kom"/>
-                            <constraint firstItem="yr3-Wy-JmV" firstAttribute="top" secondItem="VTx-b4-NVD" secondAttribute="top" constant="20" id="8Wk-mA-we2"/>
+                            <constraint firstItem="yr3-Wy-JmV" firstAttribute="top" secondItem="VTx-b4-NVD" secondAttribute="top" id="8Wk-mA-we2"/>
                             <constraint firstItem="lee-Mh-zYc" firstAttribute="leading" secondItem="ZuQ-op-N9h" secondAttribute="leading" id="CMK-dg-VDG"/>
                             <constraint firstItem="yr3-Wy-JmV" firstAttribute="leading" secondItem="VTx-b4-NVD" secondAttribute="leading" constant="10" id="Fjn-Rg-ygm"/>
                             <constraint firstItem="VTx-b4-NVD" firstAttribute="trailing" secondItem="413-Sw-1b3" secondAttribute="trailing" constant="20" id="L4d-8d-eA4"/>
