--- a/macos-versions/macos-versions/Resources/Base.lproj/Main.storyboard
+++ b/macos-versions/macos-versions/Resources/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Versions View Controller-->
+        <!--Macos Versions-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="VersionsViewController" customModule="macos_versions" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,45 +20,57 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple-background" translatesAutoresizingMaskIntoConstraints="NO" id="d7H-4q-ZYa">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wu7-nH-1xn">
-                                <rect key="frame" x="20" y="117" width="374" height="719"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wu7-nH-1xn">
+                                <rect key="frame" x="97" y="117" width="220" height="719"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sPm-rz-hqB">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="LWO-M6-s27"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="80" id="sPm-rz-hqB">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TSM-aa-jMY">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TSM-aa-jMY" customClass="VersionCollectionViewCell" customModule="macos_versions" customModuleProvider="target">
+                                        <rect key="frame" x="46" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cSY-81-bVm">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <segue destination="kqc-jo-k1g" kind="presentation" identifier="versionDetail" id="wdQ-Ll-iJ4"/>
+                                            <segue destination="kqc-jo-k1g" kind="show" identifier="versionDetail" id="wdQ-Ll-iJ4"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Nvd-ir-Bxy">
+                                <rect key="frame" x="177" y="368" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="4fx-T6-A5X"/>
+                                    <constraint firstAttribute="width" constant="60" id="LQZ-6s-usE"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Nvd-ir-Bxy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2zu-iP-1A1"/>
                             <constraint firstItem="d7H-4q-ZYa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="71y-Gx-vlJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d7H-4q-ZYa" secondAttribute="trailing" id="Lt8-4d-LYE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="d7H-4q-ZYa" secondAttribute="bottom" id="V52-mn-ZL1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Wu7-nH-1xn" secondAttribute="bottom" constant="26" id="aHh-YJ-pZ0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wu7-nH-1xn" secondAttribute="trailing" constant="20" id="fJM-4z-nYL"/>
+                            <constraint firstItem="Wu7-nH-1xn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cGv-6F-IRR"/>
+                            <constraint firstItem="Nvd-ir-Bxy" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-50" id="gFh-Lh-hmy"/>
                             <constraint firstItem="Wu7-nH-1xn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="lU7-Tw-M1U"/>
-                            <constraint firstItem="Wu7-nH-1xn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="syz-j9-EQx"/>
                             <constraint firstItem="d7H-4q-ZYa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zBn-CF-zjE"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ISk-II-1yk"/>
+                    <navigationItem key="navigationItem" title="Macos Versions" id="ISk-II-1yk"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Nvd-ir-Bxy" id="tYL-C0-xsD"/>
                         <outlet property="versionsCollectionView" destination="Wu7-nH-1xn" id="Zcm-r4-RG7"/>
                     </connections>
                 </viewController>
@@ -71,11 +83,11 @@
             <objects>
                 <viewController storyboardIdentifier="DetailViewController" id="kqc-jo-k1g" customClass="DetailViewController" customModule="macos_versions" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RE2-WI-E0s">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYb-tv-zUl">
-                                <rect key="frame" x="0.0" y="-20" width="414" height="828"/>
+                                <rect key="frame" x="0.0" y="68" width="414" height="794"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple-background" translatesAutoresizingMaskIntoConstraints="NO" id="yr3-Wy-JmV">
                                         <rect key="frame" x="-64.5" y="20" width="563" height="150"/>
@@ -169,6 +181,7 @@
                             <constraint firstItem="JYb-tv-zUl" firstAttribute="centerX" secondItem="RE2-WI-E0s" secondAttribute="centerX" id="dCk-Di-jqY"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7Ms-Ho-1N0"/>
                     <connections>
                         <outlet property="dateAnnouncedLabel" destination="KXD-eH-k0B" id="096-2J-kvl"/>
                         <outlet property="dateReleasedLabel" destination="Q5g-vx-5VN" id="zJW-u1-HT2"/>
